--- a/k8s/graylog.yaml
+++ b/k8s/graylog.yaml
@@ -1,18 +1,4 @@
 apiVersion: v1
-kind: Secret
-metadata:
-  name: graylog-secret
-  namespace: graylog
-type: Opaque
-data:
-  # Change these values in production!
-  # GRAYLOG_PASSWORD_SECRET: somepasswordpepper
-  password-secret: c29tZXBhc3N3b3JkcGVwcGVy
-  # GRAYLOG_ROOT_PASSWORD_SHA2: 8c6976e5b5410415bde908bd4dee15dfb167a9c873fc4bb8a81f6f2ab448a918
-  root-password-sha2: OGM2OTc2ZTViNTQxMDQxNWJkZTkwOGJkNGRlZTE1ZGZiMTY3YTljODczZmM0YmI4YTgxZjZmMmFiNDQ4YTkxOA==
-
----
-apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: graylog-pvc
@@ -52,21 +38,45 @@ spec:
         - name: GRAYLOG_PASSWORD_SECRET
           valueFrom:
             secretKeyRef:
-              name: graylog-secret
-              key: password-secret
+              name: graylog-secrets
+              key: GRAYLOG_PASSWORD_SECRET
         - name: GRAYLOG_ROOT_PASSWORD_SHA2
           valueFrom:
             secretKeyRef:
-              name: graylog-secret
-              key: root-password-sha2
+              name: graylog-secrets
+              key: GRAYLOG_ROOT_PASSWORD_SHA2
         - name: GRAYLOG_HTTP_EXTERNAL_URI
-          value: "http://localhost:9000/"
+          valueFrom:
+            configMapKeyRef:
+              name: graylog-config
+              key: GRAYLOG_HTTP_EXTERNAL_URI
         - name: GRAYLOG_HTTP_BIND_ADDRESS
-          value: "0.0.0.0:9000"
+          valueFrom:
+            configMapKeyRef:
+              name: graylog-config
+              key: GRAYLOG_HTTP_BIND_ADDRESS
         - name: GRAYLOG_ELASTICSEARCH_HOSTS
-          value: "http://opensearch:9200"
+          valueFrom:
+            configMapKeyRef:
+              name: graylog-config
+              key: GRAYLOG_ELASTICSEARCH_HOSTS
         - name: GRAYLOG_MONGODB_URI
-          value: "mongodb://admin:password123@mongodb:27017/graylog"
+          value: "mongodb://$(MONGODB_ROOT_USERNAME):$(MONGODB_ROOT_PASSWORD)@mongodb:27017/$(MONGODB_DATABASE)"
+        - name: MONGODB_ROOT_USERNAME
+          valueFrom:
+            secretKeyRef:
+              name: graylog-secrets
+              key: MONGODB_ROOT_USERNAME
+        - name: MONGODB_ROOT_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: graylog-secrets
+              key: MONGODB_ROOT_PASSWORD
+        - name: MONGODB_DATABASE
+          valueFrom:
+            configMapKeyRef:
+              name: graylog-config
+              key: MONGODB_DATABASE
         volumeMounts:
         - name: graylog-storage
           mountPath: /usr/share/graylog/data
