--- a/k8s/mongodb.yaml
+++ b/k8s/mongodb.yaml
@@ -1,16 +1,4 @@
 apiVersion: v1
-kind: Secret
-metadata:
-  name: mongodb-secret
-  namespace: graylog
-type: Opaque
-data:
-  # admin:password123 (base64 encoded)
-  username: YWRtaW4=
-  password: cGFzc3dvcmQxMjM=
-
----
-apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: mongodb-pvc
@@ -47,13 +35,18 @@ spec:
         - name: MONGO_INITDB_ROOT_USERNAME
           valueFrom:
             secretKeyRef:
-              name: mongodb-secret
-              key: username
+              name: graylog-secrets
+              key: MONGODB_ROOT_USERNAME
         - name: MONGO_INITDB_ROOT_PASSWORD
           valueFrom:
             secretKeyRef:
-              name: mongodb-secret
-              key: password
+              name: graylog-secrets
+              key: MONGODB_ROOT_PASSWORD
+        - name: MONGO_INITDB_DATABASE
+          valueFrom:
+            configMapKeyRef:
+              name: graylog-config
+              key: MONGODB_DATABASE
         volumeMounts:
         - name: mongodb-storage
           mountPath: /data/db
