--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,9 @@
-version: '3.8'
-
 services:
   # MongoDB - Graylog's database
   mongodb:
     image: mongo:6.0
     container_name: graylog-mongodb
     restart: unless-stopped
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: ${MONGODB_ROOT_USERNAME:-admin}
-      MONGO_INITDB_ROOT_PASSWORD: ${MONGODB_ROOT_PASSWORD:-password123}
     volumes:
       - mongodb_data:/data/db
     networks:
@@ -71,17 +66,17 @@ services:
       GRAYLOG_HTTP_EXTERNAL_URI: ${GRAYLOG_HTTP_EXTERNAL_URI:-http://localhost:9000/}
       GRAYLOG_HTTP_BIND_ADDRESS: 0.0.0.0:9000
       GRAYLOG_ELASTICSEARCH_HOSTS: http://opensearch:9200
-      GRAYLOG_MONGODB_URI: mongodb://${MONGODB_ROOT_USERNAME:-admin}:${MONGODB_ROOT_PASSWORD:-password123}@mongodb:27017/${MONGODB_DATABASE:-graylog}
+      GRAYLOG_MONGODB_URI: mongodb://mongodb:27017/graylog
     volumes:
       - graylog_data:/usr/share/graylog/data
     networks:
       - graylog-network
     ports:
       - "9000:9000"
-      - "12201:12201/udp"  # GELF UDP
-      - "12201:12201/tcp"  # GELF TCP
-      - "1514:1514"        # Syslog TCP
-      - "5555:5555/tcp"    # Beats
+      - "12201:12201/udp" # GELF UDP
+      - "12201:12201/tcp" # GELF TCP
+      - "1514:1514" # Syslog TCP
+      - "5555:5555/tcp" # Beats
     depends_on:
       - mongodb
       - opensearch
